<resources>
    <string name="app_name">EspressoTest</string>
    <string name="sign_in">Sign In</string>
</resources>
